--- a/index.html
+++ b/index.html
@@ -1,9 +1,35 @@
-<h3>Welcome to the Tappan Zee Bridge Historical Preservation Society</h3>
 
-<h5>FULL WEBSITE COMING SOON</h5>
-<br><br>
-<h6>In the meantime:</h6>
 
-<h5><a href="https://www.change.org/p/the-ny-state-legislature-return-the-tappan-zee-name-to-those-who-rightfully-deserve-it-the-indians-and-dutch/u/22088903>Sign the petition</a>.
-<br>
-<h5><a href="https://www.gofundme.com/savethetappanzee">Donate to the cause</a>.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Latest compiled and minified Bootstrap CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+  <!-- jQuery UI CSS, for Board section's accordion and Programs section's tabs -->
+  <link rel="stylesheet" type="text/css" href="css/jquery-ui.css">
+  <!-- Break Diving's custom CSS -->
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+
+  <!-- jQuery library -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <title>TZB Historical Preservation Society</title>
+
+</head>
+
+<!--BREAK DIVING WEBSITE CONTENT BELOW THIS LINE-->
+
+<body>
+  <h3>Welcome to the Tappan Zee Bridge Historical Preservation Society</h3>
+
+  <h5>FULL WEBSITE COMING SOON</h5>
+  <br><br>
+  <h6>In the meantime:</h6>
+
+  <h5><a href="https://www.change.org/p/the-ny-state-legislature-return-the-tappan-zee-name-to-those-who-rightfully-deserve-it-the-indians-and-dutch/u/22088903">Sign the petition</a>.</h5>
+  <br>
+  <h5><a href="https://www.gofundme.com/savethetappanzee">Donate to the cause</a>.</h5>
+</body>
