--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 </head>
 
-<!--BREAK DIVING WEBSITE CONTENT BELOW THIS LINE-->
+<!--TSZHPS WEBSITE CONTENT BELOW THIS LINE-->
 
 <body>
   <h3>Welcome to the Tappan Zee Bridge Historical Preservation Society</h3>
@@ -29,7 +29,7 @@
   <br><br>
   <h6>In the meantime:</h6>
 
-  <h5><a href="https://www.change.org/p/the-ny-state-legislature-return-the-tappan-zee-name-to-those-who-rightfully-deserve-it-the-indians-and-dutch/u/22088903">Sign the petition</a>.</h5>
+  <h5><a href="https://www.change.org/p/the-ny-state-legislature-return-the-tappan-zee-name-to-those-who-rightfully-deserve-it-the-indians-and-dutch/u/22088903" target="_blank">Sign the petition</a>.</h5>
   <br>
-  <h5><a href="https://www.gofundme.com/savethetappanzee">Donate to the cause</a>.</h5>
+  <h5><a href="https://www.gofundme.com/savethetappanzee" target="_blank">Donate to the cause</a>.</h5>
 </body>
