--- a/index.html
+++ b/index.html
@@ -20,16 +20,44 @@
 
 </head>
 
+<body>
+
+<div class="container container-fluid">
+
+<!--SECTION: NAV BAR-->
+  <div id="nav-placeholder">
+  </div>
+  <script>
+    $(function(){
+      $("#nav-placeholder").load("navigation.html");
+    });
+  </script>
+
+  <br><br><br>
+
 <!--TSZHPS WEBSITE CONTENT BELOW THIS LINE-->
 
-<body>
-  <h3>Welcome to the Tappan Zee Bridge Historical Preservation Society</h3>
+  <h3 class="text-center">Welcome to the Tappan Zee Bridge Historical Preservation Society</h3>
+  <h4 class="text-center">CURRENT AMOUNT RAISED: $4,095 of $100,000.  (Amount Updated December 6, 2017)</h4>
 
-  <h5>FULL WEBSITE COMING SOON</h5>
   <br><br>
-  <h6>In the meantime:</h6>
+  
+  <div class="row">
+    <div class="col-md-6 col-xs-12 text-center">
+      <img class="text-center img-responsive" src="images/tappanzee.jpg" alt="Photo of Tappan Zee Bridge">
+    </div>
+    <div class="col-md-6 col-xs-12">
+      <h3 class="text-center">While You're Here:</h3>
+      <p class="text-center main-links">1. <a href="https://www.change.org/p/the-ny-state-legislature-return-the-tappan-zee-name-to-those-who-rightfully-deserve-it-the-indians-and-dutch/u/22088903" target="_blank">Sign the petition</a>.</p>
+      <p class="text-center main-links">2. <a href="https://www.gofundme.com/savethetappanzee" target="_blank">Donate to the cause</a>.</p>
+      <p>What started as a single signature by a guy watching tv has turned into a petition with over 101,000 signatures, and the creation of this historical preservation society.  <a href="about.html">Learn more about us.</a></p>
+    </div>
+  </div>
 
-  <h5><a href="https://www.change.org/p/the-ny-state-legislature-return-the-tappan-zee-name-to-those-who-rightfully-deserve-it-the-indians-and-dutch/u/22088903" target="_blank">Sign the petition</a>.</h5>
-  <br>
-  <h5><a href="https://www.gofundme.com/savethetappanzee" target="_blank">Donate to the cause</a>.</h5>
+  
+</div>
 </body>
+
+
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
