Fixed a few things

--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
 
     
     <div class="row">
-      <div class="col-md-5 col-xs-12">
+      <div class="col-xs-12">
         <h2>About Us</h2>
         <p>In early November, citizen Monroe Mann of Port Chester, NY turned on the tv and discovered the shocking news: the "New Tappan Zee Bridge" that Andrew Cuomo promised us was renamed the Mario Cuomo Bridge, in a secret midnight legislative session, with no input gathered from the public about whether the bridge needed a new name.</p>
         <p>If you've been keeping up with the news, clearly, the answer is NO: No the new bridge did not and DOES NOT need a new name. The history of the Tappan Indians and the Dutch founders of our state is immeasurably more important to preserve than the accomplishments of any politician, Republican, Democrat, or Independent.</p>
@@ -47,7 +47,7 @@
         <p>WE WANT OUR BRIDGE BACK.</p> 
         <p>This website will be updated shortly, once the organization is formally created.  Get ready.  The fury of the people is about to be unleashed en masse.</p> 
       </div>
-      <div class="col-md-7 col-xs-12">
+      <div class="col-xs-12">
         <h2>Introduction</h2>
         <p>Greetings!</p>
         <p>My name is Dr. Monroe Mann, PhD, Esq, MBA.  I'm a resident of Westchester County, New York, and (to avoid confusion) son of the late Port Chester attorney of the same name. You can google my name to learn more about me. For those who don't know, I'm the guy who started the petition to return the traditional Indian/Dutch Tappan Zee name to our new bridge. Rationale: History Matters.</p>
