--- a/about.html
+++ b/about.html
@@ -45,17 +45,19 @@
         <p>After reaching over 100,000 signatures and seeing the media frenzy that occurred as a result of citizens across the state (and outside of the state) speaking up, petition starter Monroe decided to take the grassroots movement and turn it into a formal, organized, and powerful advocacy organization to ensure the fight does not end without all avenues of success pursued.</p>
         <p>Andrew Cuomo: We put you on notice.  We are mobilizing.  We are raising our war chest.  We, the citizens, will not stop fighting until we win.</p>
         <p>WE WANT OUR BRIDGE BACK.</p> 
-        <p>This website will be updated shortly, once the organization is formally created.  Get ready.  The fury of the people is about to be unleashed en masse.</p> 
+        <p>This website will be updated shortly once we become a formal legal corporation.  Get ready.  The voice of the people is about to be unleashed en masse.</p> 
       </div>
       <div class="col-xs-12">
         <h2>Introduction</h2>
         <p>Greetings!</p>
         <p>My name is Dr. Monroe Mann, PhD, Esq, MBA.  I'm a resident of Westchester County, New York, and (to avoid confusion) son of the late Port Chester attorney of the same name. You can google my name to learn more about me. For those who don't know, I'm the guy who started the petition to return the traditional Indian/Dutch Tappan Zee name to our new bridge. Rationale: History Matters.</p>
-        <p>Well, the cause is growing.  But Albany doesn't appear to be listening as clearly as we had hoped: Albany is still trying to belittle our effort as a right-wing political charade that has little bipartisan support.  The truth--as we all know--is that the Tappan Zee name means a lot to all New Yorkers: Republican, Democrat, Independent, and apolitical citizens as well.</p>  
-        <p>The arguments that Albany & its supporters make in defense do not stand up:</p>
+        <p>And the cause is growing.  But Albany doesn't appear to be listening as clearly as we had hoped: Albany is still trying to belittle our effort as a right-wing political charade that has little bipartisan support.  The truth--as we all know--is that the Tappan Zee name means a lot to all New Yorkers: Republican, Democrat, Independent, and apolitical citizens as well.</p>  
+        <p>The arguments that Albany & its supporters make in defense of the renaming do not stand up:</p>
         <p>1. "New Bridge, New Name".  Negative.  London Bridge in England was destroyed four times, and four times, it was rebuilt, and yet the traditional historical name always remained.  A new name is not acceptable simply because the bridge was rebuilt.  Here, history matters.</p>
         <p>2. "There is a long tradition of renaming public structures after politicians".  Well, the tradition is wrong, corrupt, and a waste of tax-payer money.  With all due respect, the history of the Tappan Indians and the Dutch is far longer (and more important) than this terrible tradition of renaming public structures after politicians.</p>
-        <p>3. "Mario Cuomo had a profoundly positive effect on New York State."  That very well may be true, but as an apolitical organization, we won't be getting into that issue.   And that's precisely the point: it doesn't matter how much of an impact he had on our state, his name does not deserve to push aside the ever greater & historical Tappan Zee name.  In fact, after I read a recent biography of Mario Cuomo, I have to say, I have a lot of respect for him (and I'm a Republican).  I honestly think he would support our side of this controversy. It is for these reasons that I have started this fundraising drive to take our cause to the next level, and in the form of a not-for-profit that represents you (the people who signed the petition).  This organization will help us better organize and execute this fight, and will allow me to spend more of my time over this next year leading and organizing this charge.</p>
+        <p>3. "Mario Cuomo had a profoundly positive effect on New York State."  That very well may be true, but as an apolitical organization, we won't be getting into that issue.  That is precisely the point: it doesn't matter how much of an impact he had on our state, his name does not deserve to push aside the ever greater & historical Tappan Zee name.  In fact, after I read a recent biography of Mario Cuomo, I have to say, I have a lot of respect for him.  I honestly think he would support our side of this controversy.</p> 
+
+        <p>It is for these reasons that I started the fundraising drive: to take our cause to the next level in the form of a not-for-profit.  This organization will help us better organize and execute this fight, and will allow me to spend more of my time over this next year leading and organizing the effort.</p>
   </div>
 </div>
 <div class="row">
@@ -63,21 +65,21 @@
   <h2>Sole Apolitical Historical Purposes:</h2>
   <p>1. PRIMARY PURPOSE: To preserve any history related to the Tappan Zee name, and what it represents to the citizens of the state of New York, to include landmarks, historical references, schools, buildings, etc.</p> 
   <p>2. SECONDARY PURPOSE: To create some type of  Tappan Zee/Tappan Zee Bridge museum that chronicles the history of the Tappan Indians and the Dutch in New York, to include what is happening now with the bridge controversy</p>
-  <p>3. POSSIBLE TERTIARY PURPOSE: If successful (and only if successful) in regaining the Tappan Zee name, to assist other organizations fighting similar battles for apolitical historic reasons.)* If enough of you who donate disapprove of this third potential mission, it will be removed, but if you approve, it would allow any leftover money to go to additional worthy causes of the same type should we succeed here.  Note that the board will always consist of Republicans, Democrats, and Independents, so any funds would assuredly be used for apolitical reasons.</p>
+  <p>3. POSSIBLE TERTIARY PURPOSE: If successful (and only if successful) in regaining the Tappan Zee name, to assist other organizations fighting similar battles for apolitical historic reasons.)</p>
 
-  <p>**No funds willo be sued to tackle any other issues except for the two (possible three) issues above**</p>
+  <p>**No funds will be used to tackle any other issues except for the two (possible three) issues above**</p>
 
-  <p>**The above mission statement may change slightly to comply with legal requirements**</p>
+  <p>**The wording of the above mission statement may change slightly upon company formation**</p>
 </div>
 <div class="col-md-6 col-xs-12">
  <h2>Where Will the Money Go?</h2>
- <p>* To raise money to pay for signs, bumper stickers, t-shirts, and more that say "Save the Tappan Zee" to be placed in every city and town in New York State</p>
+ <p>* To raise money to pay for signs, bumper stickers, t-shirts, and more that say "Save Our Tappan Zee" to be placed in every city and town in New York State</p>
   <p>* One of the advertisements will be a billboard in Albany(if possible), and also along the highways leading up to and near the Tappan Zee Bridge (if possible).</p>
   <p>* To raise money to pay for part-time "county team leaders" and "city team leaders" to organize events and volunteers in various counties and cities, sharing the history of the Tappan Indians and the Dutch, the circumstances before us, and the importance of our cause with as many people as we can reach.</p> 
   <p>* To hire a part-time publicist to continually get the word out</p>
-  <p>* To put me on a modest ($3000/month) part-time executive director salary so that I can focus less on other matters, and more time and energy into leading this charge.</p>
-  <p>* To actually start the company ($1000 to start the not-for-profit consisting of about $250 corporation fees, $750 IRS application fees, etc.--I will donate my legal services & acumen for free to the cause)</p>
-  <p>* And yes, to eventually start the creation of the museum, to share the Tappan Indian, Dutch, and Tappan Zee Bridge history to all visitors to Westchester/Rockland (and maybe Albany!) regardless of what happens.</p> 
+  <p>* To put Executive Director Monroe Mann on a modest part-time salary so that he can focus as much time and energy as is required to lead this effort.</p>
+  <p>* To legally form the company ($1000 to start the not-for-profit consisting of about $250 corporation fees, $750 IRS application fees, etc.--I will donate my legal services & acumen for free to the cause)</p>
+  <p>* And yes, if possible, to eventually start the creation of a museum, to share the Tappan Indian, Dutch, and Tappan Zee Bridge history with all.</p> 
 </div>
 </div>
 
@@ -85,26 +87,17 @@
   <div class="col-md-6 col-xs-12">
 
   <h2>Board of Directors</h2>
-  <p>The board of directors will consist of people like you. I will not be on the board, and in fact, will answer to the board.  Some of you have been very active on the petition message boards. It will be a bipartisan board of at least 7 people (Republican, Democrat, Independent) who I believe represent the cause and represent your interests AND WHO WOULD BE AVAILABLE FOR QUARTERLY BOARD MEETINGS.</p> 
-  <p>If you feel you'd like to be on the board of directors of an historical & educational organization that focuses on preserving the history of the Tappan Indians & the Dutch, please speak up.  You can also join the staff if you're interested.</p>  
-  <p>NOTE: Only those who can verify that they are fully devoted to the cause (and not an Albany secret agent haha) will be eligible fo board membership.</p> 
+  <p>The board of directors will consist of people who support our mission, regardless of political affiliation.  Monroe Mann will not be on the board.</p>
+
   </div>
   <div class="col-md-6 col-xs-12">
-  <h2>Why is This Necessary?</h2>
-  <p>a) I believe in what we are trying to do & I believe that I have the trust of most of those who have signed the petition--I want to see the Tappan Zee name back just as much as you do.</p>
-  <p>b) I can't continue at the pace of the last three weeks (or even half the pace) as a volunteer anymore. It's really been exhausting.  But as many of you agree, if I don't keep going, we are going to lose momentum.</p>
-  <p>c) The more formal we make this effort, the more serious we will be taken. We will be able to set up a website, start having regular meetings, become better organized, and truly become a force to be reckoned with.  And we can set up a leadership succession so that even if I die, resign, or get fired by the board, the movement itself will continue.  This will ensure that this issue remains in the news and on people's minds for the next year, and if necessary, the next 20 years.</p>
-  <p>d) And, I think if we do this, it will allow us to get even more people to sign the petition I started. Thank you very much! -Monroe</p>
-  <p>Further, while the intent is to create a not-for-profit, and while our cause is noble, and should be eligible for tax-exemption, I cannot make a guarantee that we will receive tax-exempt status.  As such, please be aware that any donation would only be tax deductible if the IRS does indeed grant us tax-exempt status, a process that itself could take up to six months.</p>
-      </div>
-      <div class="col-md-6 col-xs-12">
-        <h2>Get in touch:</h2>
-        <p>Executive Director</p>
-        <p>Dr. Monroe Mann, PhD, Esq, MBA, ME</p>
-        <p>EMAIL: findingsummer AT aol DOT com</p>
-        <p>PHONE: 808-482-4136 (c)</p>
-      </div>
-    </div> 
+    <h2>Get in touch:</h2>
+      <p>Executive Director</p>
+      <p>Dr. Monroe Mann, PhD, Esq, MBA, ME</p>
+      <p>EMAIL: findingsummer AT aol DOT com</p>
+      <p>PHONE: 808-482-4136 (c)</p>
+  </div>
+</div> 
 
   </div>
 
