Updated Donor Numbers

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <!--TSZHPS WEBSITE CONTENT BELOW THIS LINE-->
 
   <h3 class="text-center">Welcome to the Tappan Zee Bridge Historical Preservation Society</h3>
-  <h4 class="text-center">CURRENT AMOUNT RAISED:<p style="color: red">$4,095 of $100,000.</p>(Amount Updated December 6, 2017)</h4>
+  <h4 class="text-center">CURRENT AMOUNT RAISED:<p style="color: red">$4,095 of $100,000 from 157 Friends of the Tappan Zee.</p>(Amount Updated December 6, 2017)</h4>
 
   <br><br>
   
