--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 
   <!-- Latest compiled and minified Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
 
   <!-- jQuery UI CSS, for Board section's accordion and Programs section's tabs -->
   <link rel="stylesheet" type="text/css" href="css/jquery-ui.css">
+
   <!-- Break Diving's custom CSS -->
   <link rel="stylesheet" type="text/css" href="css/style.css">
 
