added minified javascript in proper format

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <!-- Latest compiled and minified Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
   <!-- jQuery UI CSS, for Board section's accordion and Programs section's tabs -->
   <link rel="stylesheet" type="text/css" href="css/jquery-ui.css">
