--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- jQuery UI CSS, for Board section's accordion and Programs section's tabs -->
   <link rel="stylesheet" type="text/css" href="css/jquery-ui.css">
 
-  <!-- Break Diving's custom CSS -->
+  <!-- TZB Socierty's custom CSS -->
   <link rel="stylesheet" type="text/css" href="css/style.css">
 
   <!-- jQuery library -->
@@ -39,7 +39,7 @@
 
 <!--TSZHPS WEBSITE CONTENT BELOW THIS LINE-->
 
-  <h3 class="text-center">Welcome to the Tappan Zee Bridge Historical Preservation Society</h3>
+  <h3 class="text-center">Welcome to the<br>Tappan Zee Bridge<br>Historical Preservation Society</h3>
   <h4 class="text-center">CURRENT AMOUNT RAISED:<p style="color: red">$4,515 of $100,000 from 180 Friends of the Tappan Zee.</p>(Amount Updated December 7, 2017)</h4>
 
   <br><br>
