--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 
   <!-- Latest compiled and minified Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
   <!-- jQuery UI CSS, for Board section's accordion and Programs section's tabs -->
   <link rel="stylesheet" type="text/css" href="css/jquery-ui.css">
 
-  <!-- TZB Socierty's custom CSS -->
+  <!-- TZB Society's custom CSS -->
   <link rel="stylesheet" type="text/css" href="css/style.css">
 
   <!-- jQuery library -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <title>TZB Historical Preservation Society</title>
 
 </head>
