--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
   <h2>Sole Apolitical Historical Purposes:</h2>
   <p>1. PRIMARY PURPOSE: To preserve any history related to the Tappan Zee name, and what it represents to the citizens of the state of New York, to include landmarks, historical references, schools, buildings, etc.</p> 
   <p>2. SECONDARY PURPOSE: To create some type of  Tappan Zee/Tappan Zee Bridge museum that chronicles the history of the Tappan Indians and the Dutch in New York, to include what is happening now with the bridge controversy</p>
-  <p>3. POSSIBLE TERTIARY PURPOSE: If successful (and only if successful) in regaining the Tappan Zee name, to assist other organizations fighting similar battles for apolitical historic reasons.)</p>
+  <p>3. POSSIBLE TERTIARY PURPOSE: If successful (and only if successful) in regaining the Tappan Zee name, to assist other organizations fighting similar battles for apolitical historic reasons.</p>
 
   <p>**No funds will be used to tackle any other issues except for the two (possible three) issues above**</p>
 
