Changed company name throughout

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!-- jQuery library -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <title>TZB Historical Preservation Society</title>
+  <title>Save Our Tappan Zee, Inc.</title>
 
 </head>
 
@@ -39,7 +39,7 @@
 
 <!--TSZHPS WEBSITE CONTENT BELOW THIS LINE-->
 
-  <h3 class="text-center">Welcome to the<br>Tappan Zee Bridge<br>Historical Preservation Society</h3>
+  <h3 class="text-center">Welcome to<br>Save Our Tappan Zee, Inc.</h3>
   <h4 class="text-center">CURRENT AMOUNT RAISED:<p style="color: red">$5,125 of $100,000 from 204 Friends of the Tappan Zee.</p>(Amount Updated December 7, 2017)</h4>
 
   <br><br>
