--- a/navigation.html
+++ b/navigation.html
@@ -14,7 +14,7 @@
         </button>
 
         <a class="navbar-brand" href="index.html">
-          TZB Preservation
+          SaveOurTappanZee
         </a>
       </div>
 
