Added legal disclaimer

--- a/about.html
+++ b/about.html
@@ -64,13 +64,12 @@
 <div class="row">
   <div class="col-md-6 col-xs-12">
   <h2>Sole Apolitical Historical Purposes:</h2>
-  <p>1. PRIMARY PURPOSE: To preserve any history related to the Tappan Zee name, and what it represents to the citizens of the state of New York, to include landmarks, historical references, schools, buildings, etc.</p> 
-  <p>2. SECONDARY PURPOSE: To create some type of  Tappan Zee/Tappan Zee Bridge museum that chronicles the history of the Tappan Indians and the Dutch in New York, to include what is happening now with the bridge controversy</p>
-  <p>3. POSSIBLE TERTIARY PURPOSE: If successful (and only if successful) in regaining the Tappan Zee name, to assist other organizations fighting similar battles for apolitical historic reasons.</p>
+  <p>1. PRIMARY PURPOSE: To preserve through any lawful means any history related to the Tappan Zee name, and what it represents to the citizens of the state of New York, to include landmarks, infrastructure, historical references, schools, buildings, etc.</p> 
+  <p>2. SECONDARY PURPOSE: To raise money for (and eventually operate) a Tappan Zee/Tappan Zee Bridge museum that chronicles the history of the Tappan Indians and the Dutch in New York.</p>
+  <p>3. TERTIARY PURPOSE: If successful (and only if successful) in returning the historic Tappan Zee name to the bridge that rightfully deserves it, to assist other organizations fighting similar battles for apolitical historic reasons to preserve New York and/or American history, or to directly engage in such apolitical historic preservation efforts.</p>
 
   <p>**No funds will be used to tackle any other issues except for the two (possible three) issues above**</p>
 
-  <p>**The wording of the above mission statement may change slightly upon company formation**</p>
 </div>
 <div class="col-md-6 col-xs-12">
  <h2>Where Will the Money Go?</h2>
@@ -97,6 +96,12 @@
       <p>Dr. Monroe Mann, PhD, Esq, MBA, ME</p>
       <p>EMAIL: findingsummer AT aol DOT com</p>
       <p>PHONE: 808-482-4136 (c)</p>
+  </div>
+  <div class="col-md-6 col-xs-12">
+    <h2>Legal Disclaimers</h2>
+     <p>Nothing herein shall authorize the corporation to operate, maintain or manage a charter school, a nursery school, a kindergarten, an elementary school, a secondary school, a college, university or to advertise or offer credit-bearing courses or degrees in New York State.</p>
+      <p>Nothing herein shall authorize the corporation to operate or maintain a library, museum, archive or historical society or to own or hold collections.</p>
+      <p>Except as authorized by Title VIII of the Education Law or other applicable statute, nothing herein shall authorize the corporation to engage in the practice of any profession in New York, engage in the training of any profession in New York or to use a professional title or term of any profession in New York in violation of Title VIII.</p>
   </div>
 </div> 
 
