--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 <!--TSZHPS WEBSITE CONTENT BELOW THIS LINE-->
 
-  <h3 class="text-center">Welcome to<br>Save Our Tappan Zee, Inc.</h3>
+  <h3 class="text-center">Welcome to<br>Save Our Tappan Zee, Inc. (pending)</h3>
   <h4 class="text-center">CURRENT AMOUNT RAISED:<p style="color: red">$5,125 of $100,000 from 204 Friends of the Tappan Zee.</p>(Amount Updated December 7, 2017)</h4>
 
   <br><br>
