--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 
 <!--TSZHPS WEBSITE CONTENT BELOW THIS LINE-->
 
-  <h3 class="text-center">Welcome to<br>Save Our Tappan Zee, Inc. (pending)</h3>
-  <h4 class="text-center">CURRENT AMOUNT RAISED:<p style="color: red">$5,125 of $100,000 from 204 Friends of the Tappan Zee.</p>(Amount Updated December 7, 2017)</h4>
+  <h3 class="text-center">Welcome to<br>COMPANY NAME COMING SOON</h3>
+  <h4 class="text-center">CURRENT AMOUNT RAISED:<p style="color: red">$8,003 of $100,000 from 272 Friends of the Tappan Zee.</p>(Amount Updated December 18, 2017)</h4>
 
   <br><br>
   
@@ -52,11 +52,20 @@
       <h3 class="text-center">While You're Here:</h3>
       <p class="text-center main-links">1. <a href="https://www.change.org/p/the-ny-state-legislature-return-the-tappan-zee-name-to-those-who-rightfully-deserve-it-the-indians-and-dutch/u/22088903" target="_blank">Sign the petition</a>.</p>
       <p class="text-center main-links">2. <a href="https://www.gofundme.com/savethetappanzee" target="_blank">Donate to the cause</a>.</p>
-      <p>What started as a single signature by a guy watching tv has turned into a petition with over 101,000 signatures, and the creation of this historical preservation society.  <a href="about.html">Learn more about us.</a></p>
+      <p>What started as a single signature by a guy watching tv has turned into a petition with over 101,000 signatures, and the creation of this advocacy organization.  <a href="about.html">Learn more about us.</a></p>
       <br><br>
       <hr />
     </div>
   </div>
+
+  <!-- Andrew Cuomo, I'm a political hack, and I'll never give you your Tappan Zee back -->
+  <!-- Andrew Cuomo, we agree you're a hack, and we'll do whatever it takes to get our bridge back -->
+  <!-- You tarnished the name of your dear old paw, to steal the bridge, and corrupt the law.
+  Caution, bridge ahead, and we are pissed, cause names on signs change without notice.
+  You 
+  Cuomo you sneaked right in the teepee, and stole away with the Tappan Zee.  
+  I don't care about your history, I'm Andrew Cuomo and this is all about me.
+  I snuck in the change, ha ha, he he, and now it'll never be the tappan zee -->
 
   
 </div>
