Adjusted footer again

--- a/footer.html
+++ b/footer.html
@@ -13,7 +13,7 @@
         <li><a href="contact.html">Contact us</a></li>
         <li><a href="event.html">Events</a></li>
         <li>
-          <a href="#">Donate</a></li>
+          <a href="#">Donate</a>
         </li>
       </ul>
     </div>
