--- a/footer.html
+++ b/footer.html
@@ -6,14 +6,14 @@
     <div id="footer-menu-container" class="col-md-7">
       <ul id="footer-menu" class="footer-menu">
         <li><a href="index.html">Tappan Zee</a></li>
-        <li><a href="privacy.html">Privacy</a></li>
+        <li><a href="terms.html">Privacy</a></li>
         <li><a href="terms.html">Terms</a></li>
         <li><a href="tax_document.html">Legal &amp; Tax Info</a></li>
         <li><a href="faq.html">FAQ</a></li>
         <li><a href="contact.html">Contact us</a></li>
-        <li><a href="event.html">Events</a></li>
+        <li><a href="events.html">Events</a></li>
         <li>
-          <a href="#">Donate</a>
+          <a href="http://www.gofundme.com/savethetappanzee" target="_blank">Donate</a>
         </li>
       </ul>
     </div>
