Added footer jquery code to all pages

--- a/volunteer.html
+++ b/volunteer.html
@@ -40,7 +40,7 @@
     <div class="row">
       <div class="col-md-6 col-xs-12">
 
-        <p>If you'd like to volunteer your time, please send an email to Executive Director, Dr. Monroe Mann.</p>
+        <p>All employment and volunteer opportunities will be listed here shortly.  In the meantime, if you'd like to volunteer your time, please send an email to Executive Director, Dr. Monroe Mann, or send a text--please no phone calls.</p>
       </div>
       <div class="col-md-6 col-xs-12">
         <p>EMAIL: findingsummer AT aol DOT com</p>
@@ -49,6 +49,15 @@
     </div> 
 
   </div>
+
+   <!--SECTION: FOOTER-->
+  <div id="footer-placeholder">
+  </div>
+  <script>
+    $(function(){
+      $("#footer-placeholder").load("footer.html");
+    });
+  </script>
 
 </body>
 
