--- a/faq.html
+++ b/faq.html
@@ -49,6 +49,16 @@
 
   </div>
 
+
+ <!--SECTION: FOOTER-->
+  <div id="footer-placeholder">
+  </div>
+  <script>
+    $(function(){
+      $("#footer-placeholder").load("footer.html");
+    });
+  </script>
+  
 </body>
 
 <!-- jQuery library -->
