--- a/navigation.html
+++ b/navigation.html
@@ -30,6 +30,8 @@
           <li><a href="https://www.change.org/p/the-ny-state-legislature-return-the-tappan-zee-name-to-those-who-rightfully-deserve-it-the-indians-and-dutch" target="_blank">Sign the Petition</a></li>
           <li><a href="store.html">Buy TZ Stuff</a></li>
           <li><a href="volunteer.html">Join the Fight</a></li>
+          <li><a href="board.html">Board</a></li>
+          <li><a href="staff.html">Staff</a></li>
           <li><a href="about.html">About Us</a></li>
           <li><a href="friends.html">Friends</a></li>
           <li style="font-weight: bold"><a href="https://www.gofundme.com/savethetappanzee" target="_blank">Contribute!</a></li>
