--- a/board.html
+++ b/board.html
@@ -52,7 +52,7 @@
             </p>
           </div>
         </div>
-        <h4><strong>Mr. Raymond Ferrara - Board Member</strong></h4>
+        <h4><strong>Raymond Ferrara - Board Member</strong></h4>
         <div class="row">
           <h4></h4>
           <div class="col-xs-12 col-md-3">
@@ -65,7 +65,7 @@
           </div>
         </div>
 
-        <h4><strong>Mr. Alan I. Zelato - Board Member</strong></h4>
+        <h4><strong>Alan I. Zelato - Board Member</strong></h4>
         <div class="row">
           <h4></h4>
           <div class="col-xs-12 col-md-3">
