--- a/staff.html
+++ b/staff.html
@@ -53,7 +53,7 @@
           </div>
         </div>
 
-        <h4><strong>Mr. James Dorato, MBA - Albany Coordinator & Finance</strong></h4>
+        <h4><strong>James Dorato, MBA - Albany Coordinator & Finance Staff</strong></h4>
         <div class="row">
           <h4></h4>
           <div class="col-xs-12 col-md-3">
@@ -62,6 +62,32 @@
 
           <div class="col-xs-12 col-md-9">
             <p>Jimmy grew up in the Albany area, but his adventures in undergrad and business school took him to NYC on a regular basis, and each time, he'd drive over the Tappan Zee Bridge. Jimmy is passionate about business, and is currently working in that field, but he is now even more passionate about preserving history for future generations.  He believes that it is imperative that we know about the people that came before us, recognizing the shoulders on whom we now stand, and learning about the world in which we grew up through the living history that still stands before us.  In his free time, Jimmy enjoys traveling, scuba diving, and golfing... and snowboarding when it gets too cold to be out on the course!
+            </p>
+          </div>
+        </div>
+
+        <h4><strong>Clifton Cloud - Event Management</strong></h4>
+        <div class="row">
+          <h4></h4>
+          <div class="col-xs-12 col-md-3">
+            <img src="images/default.jpg" class="img-responsive" alt="photo of Raymond Ferrara" style="max-height: 200px; max-width: 200px; text-align: center">
+          </div>
+
+          <div class="col-xs-12 col-md-9">
+            <p>Bio Coming Soon.
+            </p>
+          </div>
+        </div>
+
+        <h4><strong>Dena Restaino - High School Coordinator / Competitions </strong></h4>
+        <div class="row">
+          <h4></h4>
+          <div class="col-xs-12 col-md-3">
+            <img src="images/dena.jpg" class="img-responsive" alt="photo of Raymond Ferrara" style="max-height: 200px; max-width: 200px; text-align: center">
+          </div>
+
+          <div class="col-xs-12 col-md-9">
+            <p>Dena is a lifelong resident of Westchester County for over 48 years, educated at Valhalla High, and then University of Miami, where she earned her BS as well as Master of Science in Physical Therapy.  She then attended Des Moines Osteopathic School, where she became a Doctor of Physical Therapy, graduating with Honors and Distinction. She is a member of the Medical Honor Society since 2008. Past long-time employers include Burke Rehabilitation Hospital and St. Joseph's Medical Center.  Today, she is self-employed at Kinetic Solutions.  She takes great pride in treating any military veteran for free, encouraging any vet to contact her with any physical therapy issue he or she may have. 
             </p>
           </div>
         </div>
