--- a/about.html
+++ b/about.html
@@ -108,13 +108,13 @@
   </div>
 
     <!--SECTION: FOOTER-->
-  <div id="footer-placeholder">
+ <!--  <div id="footer-placeholder">
   </div>
   <script>
     $(function(){
       $("#footer-placeholder").load("footer.html");
     });
-  </script>
+  </script> -->
 
 </body>
 
