--- a/faq.html
+++ b/faq.html
@@ -51,13 +51,13 @@
 
 
  <!--SECTION: FOOTER-->
-  <div id="footer-placeholder">
+  <!-- <div id="footer-placeholder">
   </div>
   <script>
     $(function(){
       $("#footer-placeholder").load("footer.html");
     });
-  </script>
+  </script> -->
   
 </body>
 
