--- a/friends.html
+++ b/friends.html
@@ -50,13 +50,13 @@
   </div>
 
    <!--SECTION: FOOTER-->
-  <div id="footer-placeholder">
+ <!--  <div id="footer-placeholder">
   </div>
   <script>
     $(function(){
       $("#footer-placeholder").load("footer.html");
     });
-  </script>
+  </script> -->
 
 </body>
 
