--- a/volunteer.html
+++ b/volunteer.html
@@ -51,13 +51,13 @@
   </div>
 
    <!--SECTION: FOOTER-->
-  <div id="footer-placeholder">
+ <!--  <div id="footer-placeholder">
   </div>
   <script>
     $(function(){
       $("#footer-placeholder").load("footer.html");
     });
-  </script>
+  </script> -->
 
 </body>
 
