fixed total number of donations

--- a/friends.html
+++ b/friends.html
@@ -40,7 +40,8 @@
     <div class="row">
       <div class="col-md-6 col-xs-12">
         <h2>Friends of the Tappan Zee</h2>
-        <p>Names of the hundreds of financial contributors will be listed here shortly.</p>
+        <p>Names of the hundreds of financial contributors will be listed here shortly, once our bank account is open, and GoFundMe provides me a full list of all those who donated.</p>
+        <p>NOTE: Anyone who donated anononymously will remain anonymous.</p>
       </div>
       <div class="col-md-6 col-xs-12">
         
