--- a/board.html
+++ b/board.html
@@ -9,12 +9,12 @@
 
   <!-- jQuery UI CSS, for Board section's accordion and Programs section's tabs -->
   <link rel="stylesheet" type="text/css" href="css/jquery-ui.css">
-
   <!-- Break Diving's custom CSS -->
   <link rel="stylesheet" type="text/css" href="css/style.css">
 
   <!-- jQuery library -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <title>Save Our Tappan Zee</title>
 
 </head>
