--- a/board.html
+++ b/board.html
@@ -65,7 +65,7 @@
           </div>
         </div>
 
-        <h4><strong>Alan I. Zelato - Board Member</strong></h4>
+        <h4><strong>Alan I. Zelazo - Board Member</strong></h4>
         <div class="row">
           <h4></h4>
           <div class="col-xs-12 col-md-3">
@@ -74,7 +74,7 @@
 
           <div class="col-xs-12 col-md-9">
             <p>
-             Alan recently retired after working 40 years on the railroad as a train Engineer for PATH since 1992.  Prior to that, Al was a Towerman for Amtrak.  He enjoys being an active member at The Shore Line Trolley Museum, a 501(c)(3) in East Haven, Connecticut, engaging in the restoration & preservation of vintage trolley & rapid transit cars.  He is proud to serve as Vice Chairman on the Museum's Board of Trustees.  Al is also the curator of the Hudson & Manhattan Car 503's restoration project, to bring this vintage train car back to its former glory.  He is married to his wife Dolores of over 30 years and is the father to 2 children, Jonathan & Stephanie.  He firmly believes in preserving our history for future generations which is why he wanted to become involved in this endeavor to preserve the Tappan Zee Bridge name for future generations.
+             Alan recently retired after working 40 years on the railroad as a train Engineer for PATH since 1992.  Prior to that, Al was a Towerman for Amtrak.  He enjoys being an active member at The Shore Line Trolley Museum, a 501(c)(3) in East Haven, Connecticut, engaging in the restoration & preservation of vintage trolley & rapid transit cars.  He is proud to serve as Vice Chairman on the Museum's Board of Trustees.  Al is also the curator of the Hudson & Manhattan Car 503's restoration project, to bring this vintage train car back to its former glory.  He is married to his wife Dolores of nearly 40 years and is the father to 2 children, Jonathan & Stephanie.  He firmly believes in preserving our history for future generations which is why he wanted to become involved in this endeavor to preserve the Tappan Zee Bridge name for future generations.
             </p>
           </div>
         </div>
