fixed volunteer pag

--- a/staff.html
+++ b/staff.html
@@ -92,7 +92,7 @@
           </div>
         </div>
 
-        <h4><strong>Your Name Here - Awesome Job Description Forthcoming</strong></h4>
+        <h4><strong>Your Name Here - Awesome Volunteer Description Forthcoming</strong></h4>
         <div class="row">
           <h4></h4>
           <div class="col-xs-12 col-md-3">
@@ -101,7 +101,7 @@
 
           <div class="col-xs-12 col-md-9">
             <p>
-             Please get involved, helping us to preserve New York's history, and your photo and bio can be here too!   Many positions available all around the state, and even country!  Let us know if you'd really like to get involved.  Trust us: you CAN make a difference.  And we need your help!
+             Please get involved, helping us to preserve New York's history, and your photo and bio can be here too!   Many volunteer positions available all around the state, and even country!  Let us know if you'd really like to get involved.  Trust us: you CAN make a difference.  And we need your help!
             </p>
           </div>
         </div>
