--- a/board.html
+++ b/board.html
@@ -114,7 +114,7 @@
         <hr />
         <h1>Advisory Committee</h1>
         
-        <h4><strong>Mr. Evan Pritchard - Pending Committee Member</strong></h4>
+        <h4><strong>Evan Pritchard - Pending Committee Member</strong></h4>
         <div class="row">
           <h4></h4>
           <div class="col-xs-12 col-md-3">
@@ -122,23 +122,20 @@
           </div>
 
           <div class="col-xs-12 col-md-9">
-            <p>
-              BIO HERE SOON
+            <p>Evan Pritchard (Abachbahamitch in Mi’kmaq) is the Director of the Center for Algonquin Culture, and is the author of "Native New Yorkers", "Henry Hudson and the Algonquins of New York" (which is required reading for many high schools), No Word For Time", and "Bird Medicine".  He has also published extensively on the Lenape Indians, including "Introduction to Lenape Words and Phrases" and "Touring Native New York". His poetry book "Greetings from Mawenawasic" (Foothills, 2014) has been acclaimed by numerous leading Native American poets, features a forward by legendary Mohawk poet Susan Deer Cloud, and is featured in the book and film "Tending the Fire" by Chris Felver and also the play "Cedars", premiered at LaMama. He has worked with countless elders to help preserve the ancient history of North America, notably the late William Commanda.  He was recently awarded the Helen Wilkinson Reynolds prize for his work unearthing forgotten Native American history in New York State. He has published a series of Native American history maps of the New York area, including one of Dutchess County. He has taught Native studies courses at Marist, Vassar, and Pace, with hundreds of radio and live appearances. An award-winning historian (Helen Wilkinson Reynolds Award, etc.), he is best known for his commentaries on the History Channel.
             </p>
           </div>
         </div>
 
-        <h4><strong>Mr. Clifton Cloud - Pending Committee Member</strong></h4>
+        <h4><strong>Clifton Cloud - Pending Committee Member</strong></h4>
         <div class="row">
           <h4></h4>
           <div class="col-xs-12 col-md-3">
-            <img src="images/default.jpg" class="img-responsive" alt="photo of Raymond Ferrara" style="max-height: 200px; max-width: 200px; text-align: center">
+            <img src="images/clifton.jpg" class="img-responsive" alt="photo of Raymond Ferrara" style="max-height: 200px; max-width: 200px; text-align: center">
           </div>
 
           <div class="col-xs-12 col-md-9">
-            <p>
-              BIO HERE SOON
-            </p>
+            <p>Clifton Cloud is a resident of Sleepy Hollow and is the Executive Director Of Star Group Productions at Cipriani USA and runs all of the Production for 3 unique and Beautiful landmark buildings.  Clifton has served on the board at the Old Dutch Church, Philipse Manor Beach Club and has been an active contributor to the Winter Blues Music Fundraiser to be held this year Jan 6th at the Tarrytown Music Hall.</p>
           </div>
         </div>
 
