--- a/staff.html
+++ b/staff.html
@@ -70,12 +70,11 @@
         <div class="row">
           <h4></h4>
           <div class="col-xs-12 col-md-3">
-            <img src="images/default.jpg" class="img-responsive" alt="photo of Raymond Ferrara" style="max-height: 200px; max-width: 200px; text-align: center">
+            <img src="images/clifton.jpg" class="img-responsive" alt="photo of Raymond Ferrara" style="max-height: 200px; max-width: 200px; text-align: center">
           </div>
 
           <div class="col-xs-12 col-md-9">
-            <p>Bio Coming Soon.
-            </p>
+            <p>Clifton Cloud is a resident of Sleepy Hollow and is the Executive Director Of Star Group Productions at Cipriani USA and runs all of the Production for 3 unique and Beautiful landmark buildings.  Clifton has served on the board at the Old Dutch Church, Philipse Manor Beach Club and has been an active contributor to the Winter Blues Music Fundraiser to be held this year Jan 6th at the Tarrytown Music Hall.</p>
           </div>
         </div>
 
