html position set to relative in style.css bootstrap links set in right positions on page

--- a/board.html
+++ b/board.html
@@ -14,7 +14,6 @@
 
   <!-- jQuery library -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <title>Save Our Tappan Zee</title>
 
 </head>
@@ -48,7 +47,7 @@
 
           <div class="col-xs-12 col-md-9">
             <p>
-              Dena is a lifelong resident of Westchester County for over 48 years, educated at Valhalla High, and then University of Miami, where she earned her BS as well as Master of Science in Physical Therapy.  She then attended Des Moines Osteopathic School, where she became a Doctor of Physical Therapy, graduating with Honors and Distinction. She is a member of the Medical Honor Society since 2008. Past long-time employers include Burke Rehabilitation Hospital and St. Joseph's Medical Center.  Today, she is self-employed at Kinetic Solutions.  She takes great pride in treating any military veteran for free, encouraging any vet to contact her with any physical therapy issue he or she may have. 
+              Dena is a lifelong resident of Westchester County for over 48 years, educated at Valhalla High, and then University of Miami, where she earned her BS as well as Master of Science in Physical Therapy.  She then attended Des Moines Osteopathic School, where she became a Doctor of Physical Therapy, graduating with Honors and Distinction. She is a member of the Medical Honor Society since 2008. Past long-time employers include Burke Rehabilitation Hospital and St. Joseph's Medical Center.  Today, she is self-employed at Kinetic Solutions.  She takes great pride in treating any military veteran for free, encouraging any vet to contact her with any physical therapy issue he or she may have.
             </p>
           </div>
         </div>
@@ -113,7 +112,7 @@
 
         <hr />
         <h1>Advisory Committee</h1>
-        
+
         <h4><strong>Evan Pritchard - Pending Committee Member</strong></h4>
         <div class="row">
           <h4></h4>
@@ -147,17 +146,16 @@
 
 
   <!--SECTION: FOOTER-->
-  <!-- <div id="footer-placeholder">
+  <div id="footer-placeholder">
   </div>
   <script>
     $(function(){
       $("#footer-placeholder").load("footer.html");
     });
-  </script> -->
+  </script>
+
+  <!-- Latest compiled JavaScript for Bootstrap -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
   </body>
 </html>
-
-<!-- jQuery library -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-
