Removed the rants from the code and emailed to me

--- a/board.html
+++ b/board.html
@@ -9,7 +9,7 @@
 
   <!-- jQuery UI CSS, for Board section's accordion and Programs section's tabs -->
   <link rel="stylesheet" type="text/css" href="css/jquery-ui.css">
-  <!-- Break Diving's custom CSS -->
+  <!-- Custom CSS -->
   <link rel="stylesheet" type="text/css" href="css/style.css">
 
   <!-- jQuery library -->
@@ -147,13 +147,13 @@
 
 
   <!--SECTION: FOOTER-->
-  <!-- <div id="footer-placeholder">
+  <div id="footer-placeholder">
   </div>
   <script>
     $(function(){
       $("#footer-placeholder").load("footer.html");
     });
-  </script> -->
+  </script>
 
   </body>
 </html>
