Updated index and about page

--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
         <p>After reaching over 100,000 signatures and seeing the media frenzy that occurred as a result of citizens across the state (and outside of the state) speaking up, petition starter Monroe decided to take the grassroots movement and turn it into a formal, organized, and powerful advocacy organization to ensure the fight does not end without all avenues of success pursued.</p>
         <p>Andrew Cuomo: We put you on notice.  We are mobilizing.  We are raising our war chest.  We, the citizens, will not stop fighting until we win.</p>
         <p>WE WANT OUR BRIDGE BACK.</p> 
-        <p>This website will be updated shortly once we become a formal legal corporation.  Get ready.  The voice of the people is about to be unleashed en masse.</p> 
+        <p>We are Save Our Tappan Zee, Inc., a New York not-for-profit, preparing now to submit our 501(c)(3) tax exempt paperwork to the IRS. Get ready.  The voice of the people is about to be unleashed en masse.</p> 
       </div>
       <div class="col-xs-12">
         <h2>Introduction</h2>
