--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   
   <div class="row">
     <div class="col-md-6 col-xs-12 text-center">
-      <img class="text-center img-responsive" src="images/tappanzee.jpg" alt="Photo of Tappan Zee Bridge">
+      <img class="text-center img-responsive" src="images/tappan-zee-night.jpg" alt="Photo of Tappan Zee Bridge">
     </div>
     <div class="col-md-6 col-xs-12">
       <h3 class="text-center">While You're Here:</h3>
