--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <p class="text-center main-links">1. <a href="https://www.change.org/p/the-ny-state-legislature-return-the-tappan-zee-name-to-those-who-rightfully-deserve-it-the-indians-and-dutch/u/22088903" target="_blank">Sign the petition</a>.</p>
       <p class="text-center main-links">2. <a href="https://www.gofundme.com/savethetappanzee" target="_blank">Donate to the cause</a>.</p>
       <p>What started as a single signature by a guy watching tv has turned into a petition with over 103,000 signatures, and the creation of this advocacy organization.  <a href="about.html">Learn more about us.</a></p>
-      <h5>Save Our Tappan Zee, Inc. is a NY not-for-profit corporation, with tax-exempt paperwork in the process of being completed and submitted in early January.</h5>
+      <p>Save Our Tappan Zee, Inc. is a NY not-for-profit corporation, with tax-exempt paperwork in the process of being completed and submitted in early January.</p>
       <br><br>
       <hr />
     </div>
